# blop

./: .cookiecutter-bloptools.yaml  .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  catalog.db  config_tiled.yml  convert_all_jupyterlite.sh  environment.yml  hypers.h5  log_config.json  pixi.toml  plot_benchmarks.ipynb  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_benchmarks.ipynb  setting_up_tiled_server.md  setup.cfg  setup.py  test.sh  tiled.sqlite
.binder/: postBuild  requirements.txt
.github/workflows/: README.md  _check.yml  _docs.yml  _pre-commit.yml  _publish-pypi.yml  _testing.yml  ci.yml  docs.yml  pre-commit.yml  publish-docs.yml  publish-pypi.yml  testing.yml
blop/: __init__.py  _version.py  agent.py  dofs.py  objectives.py  plans.py  plotting.py
blop/bayesian/: __init__.py  agent.py  digestion.py  kernels.py  models.py  plotting.py  transforms.py
blop/bayesian/acquisition/: __init__.py  config.yml
blop/de/: de_opt_utils.py  de_optimization.py
blop/digestion/: __init__.py  tests.py
blop/experiments/nsls2/: iss.py  tes.py
blop/experiments/sirepo/: tes.py
blop/sim/: beamline.py
blop/tests/: conftest.py  test_acq_funcs.py  test_agent.py  test_agents.py  test_napari.py  test_passive_dofs.py  test_plots.py  test_read_write.py
blop/utils/: functions.py  prepare_re_env.py
bloptools/: DE_opt_utils.py  DE_optimization.py  __init__.py  _version.py  de_opt_utils.py  de_optimization.py  devices.py  functions.py  hardware_flyer.py  tasks.py  test_functions.py  utils.py
bloptools/bayesian/: __init__.py  acquisition.py  agent.py  devices.py  digestion.py  dofs.py  kernels.py  models.py  objective.py  objectives.py  plans.py  plots.py  plotting.py  transforms.py
bloptools/bayesian/acquisition/: __init__.py  analytic.py  config.yml  monte_carlo.py
bloptools/bo/: __init__.py  acquisition.py  configs.py  kernels.py  models.py
bloptools/de/: de_opt_utils.py  de_optimization.py  hardware_flyer.py
bloptools/experiments/: __init__.py
bloptools/experiments/nsls2/: iss.py  tes.py  tes_shadow.py
bloptools/experiments/shadow/: chx.py  tes.py
bloptools/experiments/sirepo/: tes.py
bloptools/experiments/tests/: __init__.py  binh_korn.py  himmelblau.py  mock_kbs.py
bloptools/gp/: __init__.py  configs.py  fitness.py  kernels.py  models.py  plans.py  utils.py
bloptools/gp/scripts/: add-placeholders.sh  benchmark.py  start_mongo.sh  start_sirepo.sh
bloptools/tasks/: __init__.py
bloptools/tests/: conftest.py  test_acq_funcs.py  test_agent.py  test_bayesian_himmelblau.py  test_bayesian_shadow.py  test_bayesian_test_funcs.py  test_boa.py  test_gp_optimizer.py  test_napari.py  test_passive_dofs.py  test_plots.py  test_targeting.py
bloptools/utils/: __init__.py  functions.py  misc.py  prepare_re_env.py
bltest/: pyvenv.cfg
docs/: Makefile  activate.sh  convert_all_jupyterlite.sh  test.sh
docs/source/: advanced_usage.rst  agent.rst  basic_usage.rst  conf.py  custom_botorch.rst  dofs.rst  explanation.rst  how-to-guides.rst  index.rst  installation.rst  notebooks.rst  objectives.rst  overview.rst  reference.rst  release-history.rst  tutorials.rst  usage.rst
docs/source/_static/: fix-content-height.css
docs/source/_templates/: index.html
docs/source/explanation/: agent-interface.rst
docs/source/explanations/: ax-integration.rst  protocols.rst
docs/source/how-to-guides/: acquire-baseline.rst  attach-data-to-experiments.rst  custom-botorch-models.rst  custom-digestion-functions.rst  custom-generation-strategies.rst  global-stopping-strategies.rst  interactive-optimization.rst  manual-suggestions.rst  run-simple-experiment.rst  save-and-load-experiments.rst  set-dof-constraints.rst  set-outcome-constraints.rst  tiled-databroker.rst  use-ophyd-devices.rst  use-tiled.rst
docs/source/notebooks/: gp-optimizer-2d.ipynb  gp-optimizer-4d.ipynb  gp-optimizer.ipynb  himmelblau-2d.ipynb  himmelblau-test.ipynb  multi-task-kbs.ipynb  tes_shadow-2d.ipynb
docs/source/reference/: agent.rst  dof-constraint.rst  dof.rst  objective.rst  outcome-constraint.rst  plans.rst  protocols.rst
docs/source/tutorials/: README.md  Untitled.ipynb  Untitled1.ipynb  XRT_Blop_Demo.ipynb  ax-blop-demo.ipynb  constrained-himmelblau.ipynb  custom-acquisition.ipynb  himmelblau.ipynb  hyperparameters.ipynb  introduction.ipynb  kb-mirrors.ipynb  latent-toroid-dimensions.ipynb  multi-task-sirepo.ipynb  my_test_bl.py  pareto-fronts.ipynb  passive-dofs.ipynb  prepare_re_env.py  qserver-experiment.md  sequential-beamline-alignment.md  sim-kb-mirrors.ipynb  sim-kb-mirrors.md  simple-experiment.md  trace_KB.py  xrt-blop-demo.ipynb  xrt-kb-mirrors.ipynb  xrt-kb-mirrors.md  xrt_beamline.py
docs/wip/: agent.rst  api.rst  ax-agent.rst  constrained-himmelblau copy.ipynb  constrained-himmelblau copy.md  custom-acquisition.ipynb  custom-acquisition.md  introduction.ipynb  introduction.md  latent-toroid-dimensions.ipynb  latent-toroid-dimensions.md  multi-task-sirepo.ipynb  multi-task-sirepo.md  objectives.rst  passive-dofs.ipynb  qserver-experiment.md  usage.rst
docs/wip/deprecated/: introduction.md  kb-mirrors.md  pareto-fronts.md  passive-dofs.md
examples/: benchmark.py  bluesky_adaptive_agent.py  prepare_bluesky.py  prepare_boa.py  prepare_chx_shadow.py  prepare_gp_optimizer.py  prepare_re_env.py  prepare_tes_shadow.py  prepare_tes_srw.py
notebooks/: benchmarking.ipynb  gp-optimizer.ipynb  model.gpo
scripts/: benchmark.py  gui.py
src/blop/: __init__.py  _version.py  agent.py  data_access.py  detectors.py  digestion.py  digestion_function.py  dofs.py  evaluation.py  objectives.py  plans.py  plotting.py  protocols.py  qserver_agent.py
src/blop/ax/: __init__.py  adapters.py  agent.py  dof.py  objective.py  optimizer.py  qserver_agent.py
src/blop/bayesian/: kernels.py  models.py  plotting.py  transforms.py
src/blop/de/: __init__.py  de_opt_utils.py  de_optimization.py  hardware_flyer.py
src/blop/digestion/: __init__.py  (+1 more)
(+66 files in other folders)
