[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools_scm"]
build-backend = "hatchling.build"

[project]
name = "blop"
description = "Beamline optimization with machine learning"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
  { name = "Brookhaven National Laboratory", email = "tmorris@bnl.gov" }
]
maintainers = [
  { name = "Brookhaven National Laboratory", email = "tmorris@bnl.gov" }
]
requires-python = ">=3.9"

dependencies = [
    "area-detector-handlers",
    "bluesky",
    "botorch",
    "databroker",
    "gpytorch",
    "h5py",
    "matplotlib",
    "numpy",
    "ophyd",
    "ortools",
    "scipy",
    "tables",
    "torch",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

dynamic = ["version"]

[project.optional-dependencies]

sirepo = [
    "sirepo-bluesky"
]

napari = [
    "napari"
]

gui = [
    "nicegui"
]

dev = [
    "black",
    "pytest-codecov",
    "coverage",
    "flake8",
    "furo",
    "isort",
    "nbstripout",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "sphinx",
    "twine",
    "ipython",
    "jupyter",
    "matplotlib",
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
]


[project.urls]
Homepage = "https://github.com/NSLS-II/blop"
Documentation = "https://nsls-ii.github.io/blop"
"Bug Reports" = "https://github.com/NSLS-II/blop/issues"


[tool.hatch.build.targets.wheel]
only-include = ["src/blop"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""


[tool.setuptools_scm]
version_file = "src/blop/_version.py"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/blop/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.black]
line-length = 125
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
